fondo mas preguntas done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Quiz adaptable</title>
   <style>
     body {
+      background-image: url("IMG/cat-background.jpg");
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px;
@@ -40,22 +41,77 @@
   <script>
     const preguntas = [
       {
-        texto: "¿Qué fruta es esta?",
+        texto: "¿Dónde nos conocimos por primera vez?",
         imagen: "IMG/sticker_cata.png",
-        opciones: ["Manzana", "Pera"]
+        opciones: ["Actividad de tutores", "Taller 0", "Bienvenida GoIng", "Junta GDS GoIng"]
       },
       {
-        texto: "¿Qué animal es este?",
+        texto: "¿Cuál fue mi excusa para pedirte el celular en el taller 0?",
         imagen: "IMG/sticker_cata.png",
-        opciones: ["León", "Tigre", "Pantera", "Gato"]
+        opciones: ["Te quería pedir la hora", "quería jugar poker", "Me quería sacar una foto"]
       },
       {
-        texto: "¿Qué edificio es este?",
+        texto: "¿Dónde fue nuestra primera cita?",
         imagen: "IMG/sticker_cata.png",
-        opciones: ["Torre Eiffel", "Empire State"]
+        opciones: ["Completos Colombianos", "Pastito luksic", "Completos pedrero"]
       },
       {
-        texto: "¿Quieres pololear conmigo?",
+        texto: "¿Qué comida te dí para conquistarte?",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["Una coca cola", "Un completo", "Donuts a tu casa","Pure con lechuga xd"]
+      },
+      {
+        texto: "Cuál es mi personaje favorito de la película Flow",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["Gatito Flow", "Capybara", "Lemur","Garza"]
+      },
+      {
+        texto: "¿Por qué soy conocido en tu casa?",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["Por ser lindo", "Por dejar la cagada en el baño", "Por mojar a la amiga de tu mamá", "Por tener modales"]
+      },
+      {
+        texto: "En qué momento decidiste que 'yo si'",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["En el pasto del luksic", "En la salida del Ramen","En el taller 0", "Casa de Rorro"]
+      },
+      {
+        texto: "Momento importante donde te 'abrí' lo que es mi vida",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["Cuando te conté de mi papá", "Cuando te ivité a mi casa", "Cuando te hablé de mi gato"]
+      },
+      {
+        texto: "¿Dónde nos dimos nuestro primer beso?",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["En tu cama :o", "En el pasto del Lider", "Después de ver Flow"]
+      },
+      {
+        texto: "¿Quién dijo 'te quiero'primero?",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["David (yo xd)", "Catita (tu - bonita)"]
+      },
+      {
+        texto: "En lugar de ir a un café con 'anime' dónde fuimos",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["Jonny Rockets", "McDonald's", "ChuckeCheese"]
+      },
+      {
+        texto: "Cita donde llegue 20 minutos tarde",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["La segunda vez que comimos completos", "Melt pizza", "Cerrito, ramen y mucho amor <3", "A tu propia casa"]
+      },
+      {
+        texto: "¿Cuándo nos dijimos 'te amo' por primera vez?",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["30 abril 2025", "26 abril 2025", "27 abril 2024", "11 septiembre 2000 (xd)"]
+      },
+      {
+        texto: "¿Cuál es la canción de nuestra relación?",
+        imagen: "IMG/sticker_cata.png",
+        opciones: ["He barrido el sol (los tres)", "La verdad (Kidd pudú)", "La velocidad de la luz (Los bunkers)"]
+      },
+      {
+        texto: "Catita, David (yo xd) tiene algo que decirte...",
         imagen: "IMG/sticker_cata.png",
         opciones: ["Si", "No"],
         esFinal: true
